# conference-banner

./: CMakeLists.txt  Slide1.qml  Slide2.qml  main.cpp  main.qml  model-test.cpp  paths.cpp  paths.h  talk-model.cpp  talk-model.h  vtprepare.cpp  web.cpp
